--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,10 @@
   padding: 2rem;
   text-align: center;
 }
-
+#root {
+  background: linear-gradient(to right bottom, #392196, #ff69b4);
+  width: 100%;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -40,3 +43,17 @@
 .read-the-docs {
   color: #888;
 }
+
+::-webkit-scrollbar {
+  width: 8px; /* Width of the scrollbar */
+}
+/* ::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+} */
