--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
 body {
-  background: linear-gradient(to right bottom, #392196, #ff69b4);
+  background: linear-gradient(to right bottom, #14b8a6, #0f766e);
   width: 100%;
 }
-.logo {
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -19,7 +19,7 @@ body {
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
-}
+} */
 
 @keyframes logo-spin {
   from {
